--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: hsl(233, 47%, 7%) !important;
+    background-color: hsl(233, 47%, 7%);
 }
 
 h1, h2, .stats p {
@@ -18,12 +18,24 @@ h1, h2 {
     margin: 10% auto auto auto;
     display: flex;
     flex-direction: row;
-    max-width: 69.375rem;
-    max-height: 27.875rem;
+    width: 69.375rem;
+    height: 27.875rem;
     background-color:hsl(244, 38%, 16%);
     border-radius: 5px;
 }
 
+.illustration {
+    position: relative;
+}
+
+.illustration::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: hsla(277, 87%, 21%, 0.603);
+    border-radius: 0px 5px 5px 0px;
+}
 .illustration img {
     border-radius: 0px 5px 5px 0px;
 }
@@ -63,8 +75,69 @@ h1, h2 {
     margin-right: 0;
 }
 
+.desktop-img {
+    display: initial;
+}
+
+.mobile-img {
+    display: none;
+}
+
 footer {
     margin-top: 2.5rem;
 }
 .attribution { font-size: 11px; text-align: center; color: white;}
     .attribution a { color: hsl(228, 45%, 44%); }
+
+/* Mobile View */
+@media (max-width: 500px) {
+    
+    .card {
+        margin-top: 20%;
+        width: 20.438rem;
+        height: 48.75rem;
+        flex-direction: column-reverse;
+    }
+
+    .card-main {
+        max-width: unset;
+        padding: 2rem 1rem;
+        text-align: center;
+    }
+
+    .card-main p {
+        text-align: inherit;
+    }
+
+    .stats {
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .stats-number{
+        margin-right: unset;
+    }
+    .illustration {
+        border-radius: 5px 5px 0 0;
+        height: 40%;
+     }
+    
+    .illustration::before {
+        border-radius: 5px 5px 0 0;
+    }
+
+    .illustration img {
+        border-radius: 5px 5px 0 0;
+        height: 100%;
+        width: 100%;
+    }
+
+    .desktop-img {
+        display: none;
+    }
+
+    .mobile-img {
+        display: initial;
+    }
+
+    }
