--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     background-color: hsl(233, 47%, 7%);
+    font-size: 1rem;
 }
 
 h1, h2, .stats p {
@@ -18,8 +19,8 @@ h1, h2 {
     margin: 10% auto auto auto;
     display: flex;
     flex-direction: row;
-    width: 69.375rem;
-    height: 27.875rem;
+    max-width: 69.375rem;
+    max-height: 27.875rem;
     background-color:hsl(244, 38%, 16%);
     border-radius: 5px;
 }
@@ -77,6 +78,7 @@ h1, h2 {
 
 .desktop-img {
     display: initial;
+    position: relative;
 }
 
 .mobile-img {
@@ -94,8 +96,8 @@ footer {
     
     .card {
         margin-top: 20%;
-        width: 20.438rem;
-        height: 48.75rem;
+        max-width: 20.438rem;
+        max-height: 48.75rem;
         flex-direction: column-reverse;
     }
 
@@ -119,7 +121,7 @@ footer {
     }
     .illustration {
         border-radius: 5px 5px 0 0;
-        height: 40%;
+        position: relative;
      }
     
     .illustration::before {
@@ -128,8 +130,8 @@ footer {
 
     .illustration img {
         border-radius: 5px 5px 0 0;
-        height: 100%;
         width: 100%;
+        display: block;
     }
 
     .desktop-img {
